--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang = "en">
     <head>
         <link rel="stylesheet" href="./style/style.css">
-        <script src="/scripts/setup.js"></script>
-        <script src="/scripts/game.js"></script>
+        <script src="/scripts/setup.js" type="text/javascript"></script>
+        <script src="/scripts/game.js" type="text/javascript"></script>
         <title>Word Game</title>
     </head>
     <body id="main"> 
