--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             your guess corresponds to the target word.<br><br>
             <span class="green">Green:</span> The letter is in the target word and in the correct place.<br><br>
             <span class="yellow">Yellow:</span> The letter is in the target word but not in the correct place.<br><br>
-            <span class="grey">Grey:</span> The letter is not in the word. 
+            <span class="grey">Grey:</span> The letter is not in the target word. 
         </div>
     </body>
 </html>
