--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
+        <meta name="viewport" conent="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style/style.css">
-        <script src="/scripts/setup.js" type="text/javascript"></script>
-        <script src="/scripts/game.js" type="text/javascript"></script>
+        <script src="./scripts/setup.js" type="text/javascript"></script>
+        <script src="./scripts/game.js" type="text/javascript"></script>
         <title>Word Game</title>
     </head>
     <body id="main"> 
@@ -134,7 +135,7 @@
             your guess corresponds to the target word.<br><br>
             <span class="green">Green:</span> The letter is in the target word and in the correct place.<br><br>
             <span class="yellow">Yellow:</span> The letter is in the target word but not in the correct place.<br><br>
-            <span class="grey">Grey:</span> The letter is not in the target word. 
+            <span class="grey">Grey:</span> The letter is not in the word. 
         </div>
     </body>
 </html>
