--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <meta name="viewport" conent="width=device-width, initial-scale=1.0">
+        <meta name="viewport" conent="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="./style/style.css">
         <script src="./scripts/setup.js" type="text/javascript"></script>
         <script src="./scripts/game.js" type="text/javascript"></script>
