bugfixes + buttons become divs

--- a/index.html
+++ b/index.html
@@ -63,52 +63,52 @@
         <div class="container" id="alphacontainer">
             <table class="alphabet">
                 <tr>
-                    <td><button class="letter" id="Q">Q</button></td>
-                    <td><button class="letter" id="W">W</button></td>
-                    <td><button class="letter" id="E">E</button></td>
-                    <td><button class="letter" id="R">R</button></td>
-                    <td><button class="letter" id="T">T</button></td>
-                    <td><button class="letter" id="Y">Y</button></td>
-                    <td><button class="letter" id="U">U</button></td>
-                    <td><button class="letter" id="I">I</button></td>
-                    <td><button class="letter" id="O">O</button></td>
-                    <td><button class="letter" id="P">P</button></td>
+                    <td><div class="letter" id="Q">Q</div></td>
+                    <td><div class="letter" id="W">W</div></td>
+                    <td><div class="letter" id="E">E</div></td>
+                    <td><div class="letter" id="R">R</div></td>
+                    <td><div class="letter" id="T">T</div></td>
+                    <td><div class="letter" id="Y">Y</div></td>
+                    <td><div class="letter" id="U">U</div></td>
+                    <td><div class="letter" id="I">I</div></td>
+                    <td><div class="letter" id="O">O</div></td>
+                    <td><div class="letter" id="P">P</div></td>
                 </tr>
             </table>
         </div>
         <div class="container">
             <table class="alphabet">
                 <tr>
-                    <td><button class="letter" id="A">A</button></td>
-                    <td><button class="letter" id="S">S</button></td>
-                    <td><button class="letter" id="D">D</button></td>
-                    <td><button class="letter" id="F">F</button></td>
-                    <td><button class="letter" id="G">G</button></td>
-                    <td><button class="letter" id="H">H</button></td>
-                    <td><button class="letter" id="J">J</button></td>
-                    <td><button class="letter" id="K">K</button></td>
-                    <td><button class="letter" id="L">L</button></td>
+                    <td><div class="letter" id="A">A</div></td>
+                    <td><div class="letter" id="S">S</div></td>
+                    <td><div class="letter" id="D">D</div></td>
+                    <td><div class="letter" id="F">F</div></td>
+                    <td><div class="letter" id="G">G</div></td>
+                    <td><div class="letter" id="H">H</div></td>
+                    <td><div class="letter" id="J">J</div></td>
+                    <td><div class="letter" id="K">K</div></td>
+                    <td><div class="letter" id="L">L</div></td>
                 </tr> 
             </table>
         </div>
         <div class="container">
             <table class="alphabet">
                 <tr>
-                    <td><button class="letter" id="Enter">ENTER</button></td>
-                    <td><button class="letter" id="Z">Z</button></td>
-                    <td><button class="letter" id="X">X</button></td>
-                    <td><button class="letter" id="C">C</button></td>
-                    <td><button class="letter" id="V">V</button></td>
-                    <td><button class="letter" id="B">B</button></td>
-                    <td><button class="letter" id="N">N</button></td>
-                    <td><button class="letter" id="M">M</button></td>
-                    <td><button class="letter" id="Backspace">DELETE</button></td>
+                    <td><div class="letter" id="Enter">ENTER</div></td>
+                    <td><div class="letter" id="Z">Z</div></td>
+                    <td><div class="letter" id="X">X</div></td>
+                    <td><div class="letter" id="C">C</div></td>
+                    <td><div class="letter" id="V">V</div></td>
+                    <td><div class="letter" id="B">B</div></td>
+                    <td><div class="letter" id="N">N</div></td>
+                    <td><div class="letter" id="M">M</div></td>
+                    <td><div class="letter" id="Backspace">DELETE</div></td>
                 </tr>
             </table>
         </div>
         <br>
         <div class="container">    
-            <button style="background-color:#D3D6DA;" id="reset">NEW WORD</button>
+            <div id="reset">NEW WORD</div>
         </div>
         <div class="container">
             <p>STATISTICS</p>
