--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta name="viewport" conent="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="./style/style.css">
+        <script src="./scripts/LexiconNode.js" type="text/javascript"></script>
+        <script src="./scripts/LexiconTrieModified.js" type="text/javascript"></script>
         <script src="./scripts/setup.js" type="text/javascript"></script>
         <script src="./scripts/game.js" type="text/javascript"></script>
         <title>Word Game</title>
@@ -135,7 +137,8 @@
             your guess corresponds to the target word.<br><br>
             <span class="green">Green:</span> The letter is in the target word and in the correct place.<br><br>
             <span class="yellow">Yellow:</span> The letter is in the target word but not in the correct place.<br><br>
-            <span class="grey">Grey:</span> The letter is not in the word. 
+            <span class="grey">Grey:</span> The letter is not in the word. <br><br>
+            Feeling stuck? Turn on easy mode to receive suggestions for answers when your word isn't valid:<input type = "checkbox" id = "easyMode">
         </div>
     </body>
 </html>
